# emotif

./: .gitattributes  Cargo.toml  README.md
.github/: typos.toml
.github/workflows/: codeql-analysis.yml  test.yml
crates/emojeez/: Cargo.toml
crates/emojeez/src/: lib.rs
crates/emojeez_generate/: Cargo.toml
crates/emojeez_generate/src/: main.rs  output.rs  util.rs
crates/emojeez_generate/src/github/: mod.rs
crates/emojeez_generate/src/unicode/: mod.rs
crates/emotif/: Cargo.toml
crates/emotif/src/: main.rs
crates/unicode-types/: Cargo.toml
crates/unicode-types/src/: lib.rs
