[package]
name = "emojeez_generate"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
hex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
unicode-types = { workspace = true, features = ["serde"]}

[lints]
workspace = true
