[package]
name = "emotif"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
unicode-types = { workspace = true }
emojeez.workspace = true
gtk4.workspace = true
glib.workspace = true
gio.workspace = true
gdk4 = "0.10.1"

