[package]
name = "unicode-types"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
serde = ["dep:serde"]

[lib]
crate-type = ["lib"]

[dependencies]
serde = { workspace = true, optional = true }

[lints]
workspace = true
